Cleanup (warnings; typos; dead code; formatting)
GitOrigin-RevId: 2b38db72a1ae76aabde3ac765175a622fe0abc2b