@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.ui;
 
 import com.intellij.CommonBundle;
@@ -75,6 +75,7 @@ import static javax.swing.JComponent.WHEN_IN_FOCUSED_WINDOW;
  */
 public abstract class DialogWrapper {
   private static final Logger LOG = Logger.getInstance(DialogWrapper.class);
+
   private final JPanel myRoot = new JPanel();
 
   public enum IdeModalityType {
@@ -82,8 +83,7 @@ public abstract class DialogWrapper {
     PROJECT,
     MODELESS;
 
-    @NotNull
-    public Dialog.ModalityType toAwtModality() {
+    public @NotNull Dialog.ModalityType toAwtModality() {
       switch (this) {
         case IDE:
           return Dialog.ModalityType.APPLICATION_MODAL;
@@ -138,8 +138,7 @@ public abstract class DialogWrapper {
   /**
    * The shared instance of default border for dialog's content pane.
    */
-  @NotNull
-  public static Border createDefaultBorder() {
+  public static @NotNull Border createDefaultBorder() {
     return new JBEmptyBorder(UIUtil.getRegularPanelInsets());
   }
 
@@ -178,7 +177,7 @@ public abstract class DialogWrapper {
   private boolean myUserLocationSet;
   private boolean myUserSizeSet;
   private Dimension  myActualSize;
-  private List<? extends ValidationInfo> myInfo = Collections.emptyList();
+  private List<ValidationInfo> myInfo = List.of();
   private @Nullable DoNotAskOption myDoNotAsk;
   private Action myYesAction;
   private Action myNoAction;
@@ -205,7 +204,7 @@ public abstract class DialogWrapper {
    * @param project     parent window for the dialog will be calculated based on focused window for the
    *                    specified {@code project}. This parameter can be {@code null}. In this case parent window
    *                    will be suggested based on current focused window.
-   * @param canBeParent specifies whether the dialog can be parent for other windows. This parameter is used
+   * @param canBeParent specifies whether the dialog can be a parent for other windows. This parameter is used
    *                    by {@code WindowManager}.
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
@@ -232,7 +231,7 @@ public abstract class DialogWrapper {
     myPeer = parentComponent == null ? createPeer(project, canBeParent, project == null ? IdeModalityType.IDE : ideModalityType)
                                      : createPeer(parentComponent, canBeParent);
     myCreateSouthSection = createSouth;
-    final Window window = myPeer.getWindow();
+    Window window = myPeer.getWindow();
     if (window != null) {
       myResizeListener = new ComponentAdapter() {
         @Override
@@ -251,7 +250,7 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates modal {@code DialogWrapper} that can be parent for other windows.
+   * Creates modal {@code DialogWrapper} that can be a parent for other windows.
    * The currently active window will be the dialog's parent.
    *
    * @param project parent window for the dialog will be calculated based on focused window for the
@@ -267,7 +266,7 @@ public abstract class DialogWrapper {
   /**
    * Creates modal {@code DialogWrapper}. The currently active window will be the dialog's parent.
    *
-   * @param canBeParent specifies whether the dialog can be parent for other windows. This parameter is used
+   * @param canBeParent specifies whether the dialog can be a parent for other windows. This parameter is used
    *                    by {@code WindowManager}.
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
@@ -300,9 +299,9 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * @param parent      parent component which is used to calculate heavy weight window ancestor.
+   * @param parent      parent component which is used to calculate heavyweight window ancestor.
    *                    {@code parent} cannot be {@code null} and must be showing.
-   * @param canBeParent can be parent
+   * @param canBeParent can be a parent
    * @throws IllegalStateException if the dialog is invoked not on the event dispatch thread
    */
   protected DialogWrapper(@NotNull Component parent, boolean canBeParent) {
@@ -312,9 +311,7 @@ public abstract class DialogWrapper {
     createDefaultActions();
   }
 
-  @NotNull
-  @NlsContexts.Checkbox
-  protected String getDoNotShowMessage() {
+  protected @NotNull @NlsContexts.Checkbox String getDoNotShowMessage() {
     return UIBundle.message("dialog.options.do.not.show");
   }
 
@@ -322,13 +319,12 @@ public abstract class DialogWrapper {
     myDoNotAsk = doNotAsk;
   }
 
-  @NotNull
-  protected Alarm.ThreadToUse getValidationThreadToUse() {
+  protected @NotNull Alarm.ThreadToUse getValidationThreadToUse() {
     return Alarm.ThreadToUse.SWING_THREAD;
   }
 
   /**
-   * Allows to postpone first start of validation
+   * Allows postponing first start of validation
    *
    * @return {@code false} if start validation in {@code init()} method
    */
@@ -337,7 +333,7 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Allow to disable continuous validation.
+   * Allow disabling continuous validation.
    * When disabled {@link #initValidation()} needs to be invoked after every change of the dialog to validate.
    *
    * @return {@code false} to disable continuous validation
@@ -354,8 +350,7 @@ public abstract class DialogWrapper {
    *
    * @see <a href="https://jetbrains.design/intellij/principles/validation_errors/">Validation errors guidelines</a>
    */
-  @Nullable
-  protected ValidationInfo doValidate() {
+  protected @Nullable ValidationInfo doValidate() {
     return null;
   }
 
@@ -371,8 +366,7 @@ public abstract class DialogWrapper {
    *
    * @see <a href="https://jetbrains.design/intellij/principles/validation_errors/">Validation errors guidelines</a>
    */
-  @NotNull
-  protected List<ValidationInfo> doValidateAll() {
+  protected @NotNull List<ValidationInfo> doValidateAll() {
     ValidationInfo vi = doValidate();
 
     if (!myValidateCallbacks.isEmpty()) {
@@ -387,7 +381,7 @@ public abstract class DialogWrapper {
       return result;
     }
 
-    return vi != null ? Collections.singletonList(vi) : Collections.emptyList();
+    return vi != null ? List.of(vi) : List.of();
   }
 
   public void setValidationDelay(int delay) {
@@ -472,14 +466,13 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates border for dialog's content pane. By default content
-   * pane has has empty border with {@code (8,12,8,12)} insets. Subclasses can
+   * Creates border for dialog's content pane. By default, content
+   * pane has an empty border with {@code (8,12,8,12)} insets. Subclasses can
    * return {@code null} for no border.
    *
    * @return content pane border
    */
-  @Nullable
-  protected Border createContentPaneBorder() {
+  protected @Nullable Border createContentPaneBorder() {
     if (getStyle() == DialogStyle.COMPACT) {
       if ((SystemInfo.isMac && Registry.is("ide.mac.transparentTitleBarAppearance"))
           || (SystemInfo.isWindows && SystemInfo.isJetBrainsJvm)) {
@@ -500,7 +493,7 @@ public abstract class DialogWrapper {
   }
 
   /**
-   * Creates panel located at the south of the content pane. By default that
+   * Creates panel located at the south of the content pane. By default, that
    * panel contains dialog's buttons. This default implementation uses {@code createActions()}
    * and {@code createJButtonForAction(Action)} methods to construct the panel.
    *
@@ -565,8 +558,7 @@ public abstract class DialogWrapper {
     return createSouthPanel(leftSideButtons, rightSideButtons, addHelpToLeftSide);
   }
 
-  @NotNull
-  protected JButton createHelpButton(@NotNull Insets insets) {
+  protected @NotNull JButton createHelpButton(@NotNull Insets insets) {
     JButton helpButton = createHelpButton(getHelpAction());
     setHelpTooltip(helpButton);
     helpButton.setMargin(insets);
@@ -591,8 +583,7 @@ public abstract class DialogWrapper {
     helpButton.setToolTipText(ActionsBundle.actionDescription("HelpTopics"));
   }
 
-  @NotNull
-  private static List<Action> flattenOptionsActions(@NotNull List<? extends Action> actions) {
+  private static @NotNull List<Action> flattenOptionsActions(@NotNull List<? extends Action> actions) {
     List<Action> newActions = new ArrayList<>();
     for (Action action : actions) {
       newActions.add(action);
@@ -607,8 +598,7 @@ public abstract class DialogWrapper {
     return false;
   }
 
-  @NotNull
-  protected DialogStyle getStyle() {
+  protected @NotNull DialogStyle getStyle() {
     return DialogStyle.NO_STYLE;
   }
 
@@ -616,17 +606,7 @@ public abstract class DialogWrapper {
     return !myCheckBoxDoNotShowDialog.isSelected();
   }
 
-  /**
-   * @deprecated Do not use. Always returns false
-   */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  public boolean isTypeAheadEnabled() {
-      return false;
-  }
-
-  @NotNull
-  private List<JButton> createButtons(@NotNull List<? extends Action> actions) {
+  private @NotNull List<JButton> createButtons(@NotNull List<? extends Action> actions) {
     List<JButton> buttons = new ArrayList<>();
     for (Action action : actions) {
       buttons.add(createJButtonForAction(action));
@@ -634,10 +614,9 @@ public abstract class DialogWrapper {
     return buttons;
   }
 
-  @NotNull
-  private JPanel createSouthPanel(@NotNull List<? extends JButton> leftSideButtons,
-                                  @NotNull List<? extends JButton> rightSideButtons,
-                                  boolean addHelpToLeftSide) {
+  private @NotNull JPanel createSouthPanel(@NotNull List<? extends JButton> leftSideButtons,
+                                           @NotNull List<? extends JButton> rightSideButtons,
+                                           boolean addHelpToLeftSide) {
     JPanel panel = new SouthPanel(getStyle());
 
     if (myDoNotAsk != null) {
@@ -702,7 +681,7 @@ public abstract class DialogWrapper {
     panel.add(lrButtonsPanel, BorderLayout.CENTER);
 
     if (getStyle() == DialogStyle.COMPACT) {
-      final Color color = UIManager.getColor("DialogWrapper.southPanelDivider");
+      Color color = UIManager.getColor("DialogWrapper.southPanelDivider");
       Border line = new CustomLineBorder(color != null ? color : OnePixelDivider.BACKGROUND, 1, 0, 0, 0);
       panel.setBorder(new CompoundBorder(line, JBUI.Borders.empty(8, 12)));
     }
@@ -713,20 +692,17 @@ public abstract class DialogWrapper {
     return panel;
   }
 
-  @Nullable
-  protected JComponent createDoNotAskCheckbox() {
+  protected @Nullable JComponent createDoNotAskCheckbox() {
     return myCheckBoxDoNotShowDialog != null && myCheckBoxDoNotShowDialog.isVisible() ? myCheckBoxDoNotShowDialog : null;
   }
 
   private static final JBValue BASE_BUTTON_GAP = new JBValue.Float(UIUtil.isUnderWin10LookAndFeel() ? 8 : 12);
 
-  @NotNull
-  protected JPanel createButtonsPanel(@NotNull List<? extends JButton> buttons) {
+  protected @NotNull JPanel createButtonsPanel(@NotNull List<? extends JButton> buttons) {
     return layoutButtonsPanel(buttons);
   }
 
-  @NotNull
-  public static JPanel layoutButtonsPanel(@NotNull List<? extends JButton> buttons) {
+  public static @NotNull JPanel layoutButtonsPanel(@NotNull List<? extends JButton> buttons) {
     JPanel buttonsPanel = new NonOpaquePanel();
     buttonsPanel.setLayout(new BoxLayout(buttonsPanel, BoxLayout.X_AXIS));
 
@@ -750,8 +726,7 @@ public abstract class DialogWrapper {
    *
    * @return panel to be shown or null if it's not required
    */
-  @Nullable
-  protected JPanel createSouthAdditionalPanel() {
+  protected @Nullable JPanel createSouthAdditionalPanel() {
     return null;
   }
 
@@ -760,8 +735,7 @@ public abstract class DialogWrapper {
    * @param action should be registered to find corresponding JButton
    * @return button for specified action or null if it's not found
    */
-  @Nullable
-  protected JButton getButton(@NotNull Action action) {
+  protected @Nullable JButton getButton(@NotNull Action action) {
     return myButtonMap.get(action);
   }
 
@@ -778,7 +752,7 @@ public abstract class DialogWrapper {
     JButton button = createJButtonForAction(action, getRootPane());
 
     int mnemonic = button.getMnemonic();
-    final Object name = action.getValue(Action.NAME);
+    Object name = action.getValue(Action.NAME);
     if (mnemonic == KeyEvent.VK_Y && "Yes".equals(name)) {
       myYesAction = action;
     }
@@ -793,8 +767,7 @@ public abstract class DialogWrapper {
     return button;
   }
 
-  @NotNull
-  public static JButton createJButtonForAction(@NotNull Action action, @Nullable JRootPane rootPane) {
+  public static @NotNull JButton createJButtonForAction(@NotNull Action action, @Nullable JRootPane rootPane) {
     JButton button;
     if (action instanceof OptionAction && UISettings.getShadowInstance().getAllowMergeButtons()) {
       button = createJOptionsButton((OptionAction)action);
@@ -811,7 +784,7 @@ public abstract class DialogWrapper {
     button.setText(pair.second);
     int mnemonic = pair.first;
 
-    final Object value = action.getValue(Action.MNEMONIC_KEY);
+    Object value = action.getValue(Action.MNEMONIC_KEY);
     if (value instanceof Integer) {
       mnemonic = (Integer)value;
     }
@@ -826,15 +799,13 @@ public abstract class DialogWrapper {
     return button;
   }
 
-  @NotNull
-  private static JButton createJOptionsButton(@NotNull OptionAction action) {
+  private static @NotNull JButton createJOptionsButton(@NotNull OptionAction action) {
     JBOptionButton optionButton = new JBOptionButton(action, action.getOptions());
     optionButton.setOptionTooltipText(getDefaultTooltip());
     return optionButton;
   }
 
-  @NotNull
-  public static Pair<Integer, @Nls String> extractMnemonic(@Nullable @Nls String text) {
+  public static @NotNull Pair<Integer, @Nls String> extractMnemonic(@Nullable @Nls String text) {
     if (text == null) return pair(0, null);
 
     int mnemonic = 0;
@@ -849,7 +820,7 @@ public abstract class DialogWrapper {
         }
         ch = text.charAt(i);
         if (ch != '_' && ch != '&') {
-          // Mnemonic is case insensitive.
+          // Mnemonic is case-insensitive
           int vk = ch;
           if (vk >= 'a' && vk <= 'z') {
             vk -= 'a' - 'A';
@@ -862,33 +833,27 @@ public abstract class DialogWrapper {
     return pair(mnemonic, plainText.toString());
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@NotNull Component parent, boolean canBeParent) {
+  protected @NotNull DialogWrapperPeer createPeer(@NotNull Component parent, boolean canBeParent) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, parent, canBeParent);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(Window owner, boolean canBeParent, IdeModalityType ideModalityType) {
+  protected @NotNull DialogWrapperPeer createPeer(Window owner, boolean canBeParent, IdeModalityType ideModalityType) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, owner, canBeParent, ideModalityType);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(Window owner, boolean canBeParent, boolean applicationModalIfPossible) {
+  protected @NotNull DialogWrapperPeer createPeer(Window owner, boolean canBeParent, boolean applicationModalIfPossible) {
     return createPeer(owner, canBeParent, applicationModalIfPossible ? IdeModalityType.IDE : IdeModalityType.PROJECT);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent, @NotNull IdeModalityType ideModalityType) {
+  protected @NotNull DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent, @NotNull IdeModalityType ideModalityType) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, project, canBeParent, ideModalityType);
   }
 
-  @NotNull
-  protected DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent) {
+  protected @NotNull DialogWrapperPeer createPeer(@Nullable Project project, boolean canBeParent) {
     return DialogWrapperPeerFactory.getInstance().createPeer(this, project, canBeParent);
   }
 
-  @Nullable
-  protected JComponent createTitlePane() {
+  protected @Nullable JComponent createTitlePane() {
     return null;
   }
 
@@ -899,8 +864,7 @@ public abstract class DialogWrapper {
    *
    * @return north panel
    */
-  @Nullable
-  protected JComponent createNorthPanel() {
+  protected @Nullable JComponent createNorthPanel() {
     return null;
   }
 
@@ -909,8 +873,7 @@ public abstract class DialogWrapper {
    * center of the dialog's content pane. The implementation can return {@code null}
    * value. In this case there will be no options panel.
    */
-  @Nullable
-  protected abstract JComponent createCenterPanel();
+  protected abstract @Nullable JComponent createCenterPanel();
 
   /** @see Window#toFront() */
   public void toFront() {
@@ -955,7 +918,7 @@ public abstract class DialogWrapper {
     }
     myButtonMap.clear();
 
-    final JRootPane rootPane = getRootPane();
+    JRootPane rootPane = getRootPane();
     // if rootPane = null, dialog has already been disposed
     if (rootPane != null) {
       unregisterKeyboardActions(rootPane);
@@ -1066,8 +1029,7 @@ public abstract class DialogWrapper {
   }
 
   @ApiStatus.Internal
-  @NotNull
-  public final List<ValidationInfo> performValidateAll() {
+  public final @NotNull List<ValidationInfo> performValidateAll() {
     return doValidateAll();
   }
 
@@ -1130,8 +1092,7 @@ public abstract class DialogWrapper {
    * {@code doOKAction()} method.
    * @see #doOKAction
    */
-  @NotNull
-  protected Action getOKAction() {
+  protected @NotNull Action getOKAction() {
     return myOKAction;
   }
 
@@ -1140,8 +1101,7 @@ public abstract class DialogWrapper {
    * {@code doCancelAction()} method.
    * @see #doCancelAction
    */
-  @NotNull
-  protected Action getCancelAction() {
+  protected @NotNull Action getCancelAction() {
     return myCancelAction;
   }
 
@@ -1150,8 +1110,7 @@ public abstract class DialogWrapper {
    * {@code doHelpAction()} method.
    * @see #doHelpAction
    */
-  @NotNull
-  protected Action getHelpAction() {
+  protected @NotNull Action getHelpAction() {
     return myHelpAction;
   }
 
@@ -1194,13 +1153,11 @@ public abstract class DialogWrapper {
    *
    * @return dimension service key
    */
-  @Nullable @NonNls
-  protected String getDimensionServiceKey() {
+  protected @Nullable String getDimensionServiceKey() {
     return null;
   }
 
-  @Nullable
-  public final @NonNls String getDimensionKey() {
+  public final @Nullable String getDimensionKey() {
     return getDimensionServiceKey();
   }
 
@@ -1217,8 +1174,7 @@ public abstract class DialogWrapper {
    * @return component which should be focused when the dialog appears
    * on the screen.
    */
-  @Nullable
-  public JComponent getPreferredFocusedComponent() {
+  public @Nullable JComponent getPreferredFocusedComponent() {
     if (myPreferredFocusedComponentFromPanel != null) {
       return myPreferredFocusedComponentFromPanel;
     }
@@ -1295,7 +1251,7 @@ public abstract class DialogWrapper {
     ensureEventDispatchThread();
     myErrorText = new ErrorText(getErrorTextAlignment());
     myErrorText.setVisible(false);
-    final ComponentAdapter resizeListener = new ComponentAdapter() {
+    ComponentAdapter resizeListener = new ComponentAdapter() {
       private int myHeight;
 
       @Override
@@ -1321,15 +1277,6 @@ public abstract class DialogWrapper {
     Disposer.register(myDisposable, () -> myErrorText.myLabel.removeComponentListener(resizeListener));
 
     myRoot.setLayout(createRootLayout());
-    //{
-    //  @Override
-    //  public void paint(Graphics g) {
-    //    if (ApplicationManager.getApplication() != null) {
-    //      UISettings.setupAntialiasing(g);
-    //    }
-    //    super.paint(g);
-    //  }
-    //};
     myPeer.setContentPane(myRoot);
 
     AnAction toggleShowOptions = DumbAwareAction.create(e -> expandNextOptionButton());
@@ -1346,12 +1293,12 @@ public abstract class DialogWrapper {
     JComponent centerSection = new JPanel(new BorderLayout());
     myRoot.add(centerSection, BorderLayout.CENTER);
 
-    final JComponent n = createNorthPanel();
+    JComponent n = createNorthPanel();
     if (n != null) {
       centerSection.add(n, BorderLayout.NORTH);
     }
 
-    final JComponent centerPanel = createCenterPanel();
+    JComponent centerPanel = createCenterPanel();
     if (centerPanel != null) {
       centerPanel.putClientProperty(DIALOG_CONTENT_PANEL_PROPERTY, true);
       centerSection.add(centerPanel, BorderLayout.CENTER);
@@ -1375,14 +1322,14 @@ public abstract class DialogWrapper {
     }
 
     if (myCreateSouthSection) {
-      final JPanel southSection = new JPanel(new BorderLayout());
+      JPanel southSection = new JPanel(new BorderLayout());
       if (!isVisualPaddingCompensatedOnComponentLevel) {
         southSection.setBorder(JBUI.Borders.empty(0, 12, 8, 12));
       }
       myRoot.add(southSection, BorderLayout.SOUTH);
 
       southSection.add(myErrorText, BorderLayout.CENTER);
-      final JComponent south = createSouthPanel();
+      JComponent south = createSouthPanel();
       if (south != null) {
         southSection.add(south, BorderLayout.SOUTH);
       }
@@ -1401,8 +1348,7 @@ public abstract class DialogWrapper {
     return SwingConstants.LEADING;
   }
 
-  @NotNull
-  protected LayoutManager createRootLayout() {
+  protected @NotNull LayoutManager createRootLayout() {
     return new BorderLayout();
   }
 
@@ -1410,7 +1356,7 @@ public abstract class DialogWrapper {
     new DumbAwareAction() {
       @Override
       public void actionPerformed(@NotNull AnActionEvent e) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+        Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         if (owner instanceof JButton && owner.isEnabled()) {
           ((JButton)owner).doClick();
         }
@@ -1418,7 +1364,7 @@ public abstract class DialogWrapper {
 
       @Override
       public void update(@NotNull AnActionEvent e) {
-        final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+        Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
         e.getPresentation().setEnabled(owner instanceof JButton && owner.isEnabled());
       }
     }.registerCustomShortcutSet(CustomShortcutSet.fromString("ENTER"), root, disposable);
@@ -1446,7 +1392,7 @@ public abstract class DialogWrapper {
 
   protected final void initValidation() {
     myValidationAlarm.cancelAllRequests();
-    final Runnable validateRequest = () -> {
+    Runnable validateRequest = () -> {
       if (myDisposed) return;
       updateErrorInfo(doValidateAll());
 
@@ -1459,17 +1405,16 @@ public abstract class DialogWrapper {
       // null if headless
       JRootPane rootPane = getRootPane();
       myValidationAlarm.addRequest(validateRequest, myValidationDelay,
-                                   ApplicationManager.getApplication() == null
-                                   ? null
-                                   : rootPane == null ? ModalityState.current() : ModalityState.stateForComponent(rootPane));
+                                   ApplicationManager.getApplication() == null ? null :
+                                   rootPane != null ? ModalityState.stateForComponent(rootPane) :
+                                   ModalityState.current());
     }
     else {
       myValidationAlarm.addRequest(validateRequest, myValidationDelay);
     }
   }
 
-  @NotNull
-  protected JComponent createContentPane() {
+  protected @NotNull JComponent createContentPane() {
     return new JPanel();
   }
 
@@ -1485,8 +1430,7 @@ public abstract class DialogWrapper {
    *
    * @return initial window size
    */
-  @Nullable
-  public Dimension getInitialSize() {
+  public @Nullable Dimension getInitialSize() {
     if (myUserSizeSet) return myUserBounds.getSize();
     return null;
   }
@@ -1495,11 +1439,9 @@ public abstract class DialogWrapper {
     return myPeer.getPreferredSize();
   }
 
-  /**
-   * @deprecated Dialog action buttons should be right-aligned.
-   */
-  @ApiStatus.ScheduledForRemoval(inVersion = "2022.2")
+  /** @deprecated Dialog action buttons should be right-aligned. */
   @Deprecated
+  @ApiStatus.ScheduledForRemoval(inVersion = "2022.2")
   protected final void setButtonsAlignment(@MagicConstant(intValues = {SwingConstants.CENTER, SwingConstants.RIGHT}) int alignment) {
     if (SwingConstants.CENTER != alignment && SwingConstants.RIGHT != alignment) {
       throw new IllegalArgumentException("unknown alignment: " + alignment);
@@ -1507,19 +1449,9 @@ public abstract class DialogWrapper {
     myButtonAlignment = alignment;
   }
 
-  /** @deprecated button margins aren't used anymore. Button style is standardized. */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  public final void setButtonsMargin(@SuppressWarnings("unused") Insets insets) { }
-
   public final void setCrossClosesWindow(boolean crossClosesWindow) {
     myCrossClosesWindow = crossClosesWindow;
   }
-
-  /** @deprecated button icons aren't used anymore (except "OK" action). Button style is standardized. */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
-  protected final void setCancelButtonIcon(@SuppressWarnings("unused") Icon icon) { }
 
   protected final void setCancelButtonText(@NlsContexts.Button @NotNull String text) {
     myCancelAction.putValue(Action.NAME, text);
@@ -1563,9 +1495,7 @@ public abstract class DialogWrapper {
   }
 
   /** Returns the help identifier, or {@code null} if no help is available. */
-  @NonNls
-  @Nullable
-  protected String getHelpId() {
+  protected @Nullable String getHelpId() {
     return null;
   }
 
@@ -1640,8 +1570,7 @@ public abstract class DialogWrapper {
    * @return dialog location
    * @see JDialog#getLocation
    */
-  @NotNull
-  public Point getLocation() {
+  public @NotNull Point getLocation() {
     return myPeer.getLocation();
   }
 
@@ -1708,8 +1637,7 @@ public abstract class DialogWrapper {
 
   /** @deprecated override {@link #doOKAction()} / {@link #doCancelAction()} or hook on {@link #myDisposable} */
   @Deprecated
-  @NotNull
-  public AsyncResult<Boolean> showAndGetOk() {
+  public @NotNull AsyncResult<Boolean> showAndGetOk() {
     if (isModal()) {
       throw new IllegalStateException("The showAndGetOk() method is for modeless dialogs only");
     }
@@ -1736,8 +1664,7 @@ public abstract class DialogWrapper {
    * @return Location in absolute coordinates which is used when dialog has no dimension service key or no position was stored yet.
    * Can return null. In that case dialog will be centered relative to its owner.
    */
-  @Nullable
-  public Point getInitialLocation() {
+  public @Nullable Point getInitialLocation() {
     return myInitialLocationCallback != null
            ? myInitialLocationCallback.compute()
            : myUserLocationSet
@@ -1780,8 +1707,7 @@ public abstract class DialogWrapper {
   /**
    * Return {@code null} if we should ignore <Esc> for window closing.
    */
-  @Nullable
-  protected ActionListener createCancelAction() {
+  protected @Nullable ActionListener createCancelAction() {
     return e -> {
       if (!PopupUtil.handleEscKeyEvent()) {
         doCancelAction(e);
@@ -1802,8 +1728,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @NotNull
-  private static OptionalInt getEnabledIndexCyclic(@NotNull List<? extends Component> components, int currentIndex, boolean next) {
+  private static @NotNull OptionalInt getEnabledIndexCyclic(@NotNull List<? extends Component> components, int currentIndex, boolean next) {
     assert -1 <= currentIndex && currentIndex <= components.size();
     int start = !next && currentIndex == -1 ? components.size() : currentIndex;
 
@@ -1814,9 +1739,9 @@ public abstract class DialogWrapper {
   }
 
   private void logCloseDialogEvent(int exitCode) {
-    final boolean canRecord = canRecordDialogId();
+    boolean canRecord = canRecordDialogId();
     if (canRecord) {
-      final String dialogId = getClass().getName();
+      String dialogId = getClass().getName();
       if (StringUtil.isNotEmpty(dialogId)) {
         FeatureUsageUiEventsKt.getUiEventLogger().logCloseDialog(dialogId, exitCode, getClass());
       }
@@ -1824,9 +1749,9 @@ public abstract class DialogWrapper {
   }
 
   private void logShowDialogEvent() {
-    final boolean canRecord = canRecordDialogId();
+    boolean canRecord = canRecordDialogId();
     if (canRecord) {
-      final String dialogId = getClass().getName();
+      String dialogId = getClass().getName();
       if (StringUtil.isNotEmpty(dialogId)) {
         FeatureUsageUiEventsKt.getUiEventLogger().logShowDialog(dialogId, getClass());
       }
@@ -1835,7 +1760,7 @@ public abstract class DialogWrapper {
 
   private void logClickOnHelpDialogEvent() {
     if (!canRecordDialogId()) return;
-    final String dialogId = getClass().getName();
+    String dialogId = getClass().getName();
     if (StringUtil.isNotEmpty(dialogId)) {
       FeatureUsageUiEventsKt.getUiEventLogger().logClickOnHelpDialog(dialogId, getClass());
     }
@@ -1910,20 +1835,22 @@ public abstract class DialogWrapper {
         if (info.component != null && info.component.isVisible()) {
           IdeFocusManager.getInstance(null).requestFocus(info.component, true);
         }
-
         if (!isInplaceValidationToolTipEnabled()) {
           DialogEarthquakeShaker.shake(getPeer().getWindow());
         }
         updateErrorInfo(infoList);
         startTrackingValidation();
-        if (ContainerUtil.exists(infoList, info1 -> !info1.okEnabled)) return;
+        if (ContainerUtil.exists(infoList, info1 -> !info1.okEnabled)) {
+          return;
+        }
       }
       doOKAction();
     }
   }
 
-  private void recordAction(@NonNls String name, AWTEvent event) {
+  private void recordAction(String name, AWTEvent event) {
     if (event instanceof KeyEvent && ApplicationManager.getApplication() != null) {
+      //noinspection deprecation
       ActionsCollector.getInstance().record(name, (KeyEvent)event, getClass());
     }
   }
@@ -1991,17 +1918,15 @@ public abstract class DialogWrapper {
    * <code>{@link #setErrorText(String, JComponent)}</code> method.
    * @param text the error text to display
    */
-  protected void setErrorText(@NlsContexts.DialogMessage @Nullable final String text) {
+  protected void setErrorText(@NlsContexts.DialogMessage @Nullable String text) {
     setErrorText(text, null);
   }
 
-  protected void setErrorText(@NlsContexts.DialogMessage @Nullable final String text, @Nullable final JComponent component) {
-    setErrorInfoAll(text == null ?
-                    Collections.emptyList() :
-                    Collections.singletonList(new ValidationInfo(text, component)));
+  protected void setErrorText(@NlsContexts.DialogMessage @Nullable String text, @Nullable JComponent component) {
+    setErrorInfoAll(text == null ? List.of() : List.of(new ValidationInfo(text, component)));
   }
 
-  protected void setErrorInfoAll(@NotNull List<? extends ValidationInfo> info) {
+  protected void setErrorInfoAll(@NotNull List<ValidationInfo> info) {
     if (myInfo.equals(info)) return;
 
     Application application = ApplicationManager.getApplication();
@@ -2077,8 +2002,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @Nullable
-  public static DialogWrapper findInstance(Component c) {
+  public static @Nullable DialogWrapper findInstance(Component c) {
     while (c != null) {
       if (c instanceof DialogWrapperDialog) {
         return ((DialogWrapperDialog)c).getDialogWrapper();
@@ -2088,9 +2012,8 @@ public abstract class DialogWrapper {
     return null;
   }
 
-  @Nullable
   @SuppressWarnings("unused")
-  public static DialogWrapper findInstanceFromFocus() {
+  public static @Nullable DialogWrapper findInstanceFromFocus() {
     return findInstance(KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner());
   }
 
@@ -2159,8 +2082,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @NotNull
-  public final DialogWrapperPeer getPeer() {
+  public final @NotNull DialogWrapperPeer getPeer() {
     return myPeer;
   }
 
@@ -2175,8 +2097,7 @@ public abstract class DialogWrapper {
     }
   }
 
-  @NotNull
-  public final Disposable getDisposable() {
+  public final @NotNull Disposable getDisposable() {
     return myDisposable;
   }
 
@@ -2222,9 +2143,8 @@ public abstract class DialogWrapper {
         return false;
       }
 
-      @NotNull
       @Override
-      public String getDoNotShowMessage() {
+      public @NotNull String getDoNotShowMessage() {
         return UIBundle.message("dialog.options.do.not.ask");
       }
 
@@ -2299,8 +2219,7 @@ public abstract class DialogWrapper {
       try {
         ReflectionUtil.resetField(object, each);
       }
-      catch (Exception ignore) {
-      }
+      catch (Exception ignore) { }
     }
   }
 
@@ -2314,7 +2233,7 @@ public abstract class DialogWrapper {
 
     @Override
     public Color getBackground() {
-      final Color bg = UIManager.getColor("DialogWrapper.southPanelBackground");
+      Color bg = UIManager.getColor("DialogWrapper.southPanelBackground");
       if (myStyle == DialogStyle.COMPACT && bg != null) {
         return bg;
       }
